# VYUHA

./: .gitignore  CMakeLists.txt  README.md  Readme.md  SESSION2_QUICKSTART.md  TESTING_GUIDE.md  build_windows.bat  otsecurity.md  pyproject.toml  requirements.txt  setup.py  verify_build.sh
config/: config.yaml
contexts/: BYOVD_USAGE.md  EDR-freeze.md  EDR_FREEZE_USAGE.md  TESTING_CHECKLIST.md  WINDOWS_TESTING_INSTRUCTIONS.md  progress1.md  progress2.md
docs/: architecture.drawio
include/agent_core/: agent.hpp
include/cli/: cli.hpp
include/exploits/: byovd_vulndriver.hpp  crystal_palace_loader.hpp  edr_freeze.hpp  exploit_manager.hpp  syswhispers4_syscall.hpp
include/integration/: integration_manager.hpp
include/ml_framework/: ml_bridge.hpp  ml_engine.hpp
jdeep/: __init__.py  __main__.py
jdeep/agent_core/: __init__.py  agent.py  cleaner.py  orchestrator.py  output_handler.py  telemetry.py
jdeep/cli/: __init__.py  main.py
jdeep/config/: __init__.py  manager.py
jdeep/integration/: __init__.py  clean_module.py  edr_connector.py  manager.py  snapshot_manager.py
src/: main.cpp
src/agent_core/: CMakeLists.txt  agent.cpp  cleaner.cpp  orchestrator.cpp  output_handler.cpp  telemetry.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/exploits/: CMakeLists.txt  byovd_vulndriver.cpp  crystal_palace_loader.cpp  edr_freeze.cpp  exploit_manager.cpp  syswhispers4_syscall.cpp
src/integration/: CMakeLists.txt  clean_module.cpp  edr_connector.cpp  integration_manager.cpp  snapshot_manager.cpp
src/ml_framework/: CMakeLists.txt  DESIGN.md  README.md  ROADMAP.md  detection_analyzer.cpp  evasion_scorer.cpp  event_correlator.cpp  ml_bridge.cpp  ml_engine.cpp  requirements.txt
src/ml_framework/data/: .gitkeep  edr_profiles.json  execution_logs.csv
src/ml_framework/models/: .gitkeep
src/ml_framework/python/: adaptive_learner.py  behavior_analyzer.py  explainable_ai.py  ml_server.py  strategy_selector.py  train_agent.py  utils.py
website/: index.html  script.js  styles.css
website/assets/: VYUHA-Project-Presentation.pptx
