[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edr-adaptive-framework"
version = "2.0.0"
description = "Advanced APT Simulation & EDR Evasion Assessment Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jdeep", email = "jdeep@example.com"},
]
keywords = ["security", "edr", "pentest", "red-team", "mitre-attack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
edr-framework = "jdeep.cli.main:main"

[project.urls]
Homepage = "https://github.com/JDeep1234/EDR-Adaptive-Framework"
Repository = "https://github.com/JDeep1234/EDR-Adaptive-Framework.git"
Documentation = "https://github.com/JDeep1234/EDR-Adaptive-Framework#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["jdeep*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
